FIX 2nd Banner not Centered

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,7 +2,7 @@ body {
   font-family: Helvetica;
 }
 
-header, section{
+.banner, section{
   text-align: center;
 }
 
